fix: more margin top for button on mobile

--- a/style.css
+++ b/style.css
@@ -266,6 +266,6 @@ body {
     width: 600px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 72px;
+    margin-top: 92px;
   }
 }
